#25 changed the project name. Replaced the main page with bugcracker

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,7 +16,7 @@ play {
 
   i18n {
     langs = ["en"]
-    langCookieName = "boilerplay_lang"
+    langCookieName = "dhiNidhi_lang"
   }
 
   modules.enabled += "models.auth.AuthModule"
@@ -31,12 +31,12 @@ play {
     parser.maxMemoryBuffer = 2M
     cookies.strict = true
 
-    session.cookieName = "boilerplay_session"
-    flash.cookieName = "boilerplay_flash"
+    session.cookieName = "dhiNidhi_session"
+    flash.cookieName = "dhiNidhi_flash"
   }
 
   akka {
-    actor-system = "boilerplay"
+    actor-system = "dhiNidhi"
   }
 }
 
@@ -100,7 +100,7 @@ database {
       host = "localhost"
       port = 5432
       database = "boilerplay"
-      db.default.url="jdbc:h2:boilerplay;MODE=PostgreSQL"
+      db.default.url="jdbc:h2:dhiNidhi;MODE=PostgreSQL"
       slick = true
       doobie = true
     }
@@ -118,7 +118,7 @@ silhouette {
       authenticatorExpiry = 600
     }
     cookie {
-      name = "boilerplay_auth"
+      name = "dhiNidhi_auth"
       path = "/"
       secure = false
       useFingerprinting = false
@@ -127,7 +127,7 @@ silhouette {
       expiry = 31536000 # One year in seconds
     }
     google {
-      whitelistDomain = "boilerplay.com"
+      whitelistDomain = "dhiNidhi.com"
       authorization = "https://accounts.google.com/o/oauth2/auth"
       accessToken = "https://accounts.google.com/o/oauth2/token"
       redirect = "http://localhost:9000/signin/google"
@@ -145,7 +145,7 @@ notification {
     enabled = false
     url = "https://hooks.slack.com/services/T0QMTEDE3/B1Q9K1DB4/???"
     channel = "#general"
-    username = "Boilerplay"
+    username = "dhiNidhi"
     iconUrl = ""
   }
 }
