--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,55 +1,55 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: boilerplay
+  name: dhiNidhi
   labels:
-    app: boilerplay
+    app: dhiNidhi
 spec:
   ports:
   - port: 80
     targetPort: 9000
     name: http
   selector:
-    app: boilerplay
+    app: dhiNidhi
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: boilerplay
+  name: dhiNidhi
 spec:
   replicas: 2
   template:
     metadata:
       labels:
-        app: boilerplay
+        app: dhiNidhi
     spec:
       containers:
       - name: app
-        image: boilerplay/boilerplay:latest
+        image: dhiNidhi/dhiNidhi:latest
         ports:
         - containerPort: 9000
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: boilerplay-ingress
+  name: dhiNidhi-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-  - host: boilerplay.com
+  - host: dhiNidhi.com
     http:
       paths:
       - backend:
-          serviceName: boilerplay
+          serviceName: dhiNidhi
           servicePort: 9000
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    app: boilerplay
-  name: boilerplay-config
+    app: dhiNidhi
+  name: dhiNidhi-config
 data:
   application.conf: |
     foo = "bar"
