Enhanced config, removed stop words, single client connection

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -161,3 +161,9 @@ metrics {
     sampleRate = 1.0
   }
 }
+
+dhiNidhi {
+  elasticServer ="10.91.10.13"
+  elasticServerPort=9200
+  index="gppdefects"
+}
