--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,7 +88,7 @@ database {
     local {
       username = "boilerplay"
       password = "boilerplay"
-      host = "localhost"
+      host = "10.91.10.12"
       port = 5432
       database = "boilerplay"
       slick = true
